CSS: global `interpolate-size: allow-keywords`
This allows animation of intrinsic-sizing keywords such as `auto`.
This makes it easy to e.g. animate the transition of `height`
attributes.

Detailed explainer:
https://developer.chrome.com/docs/css-ui/animate-to-height-auto

An audit of existing animations/transitions discovered no instances
of intrinsic-sizing keywords used for animations. This CL should
therefore not introduce any regressions.

Bug: none
Change-Id: Ia2bac4f96fd330a427643bd817d0b5957ecaa87a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6105675
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -16,6 +16,8 @@
 :root {
   height: 100%;
   overflow: hidden;
+  /* stylelint-disable-next-line property-no-unknown */
+  interpolate-size: allow-keywords;
   /**
    * NOTE: please don't add to these colours!
    * We are migrating to a new set of theme colors (see below for details) and over time these colors will be deprecated / removed.
