[GM3Restyling] Update IconDialog to use ButtonDialog
This switches the usage of IconDialog to ButtonDialog and makes a few
padding changes, and removes the now obsolete IconDialog.

Before: https://i.imgur.com/Oj2qOSW.png
After: https://i.imgur.com/Piaam45.png

Bug: 383278166, 379036632
Change-Id: I58bbcdcf09f1f295904a48f27daad715de387004
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6110475
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Nancy Li <nancyly@chromium.org>
Commit-Queue: Nancy Li <nancyly@chromium.org>

--- a/front_end/panels/application/preloading/components/preloadingDisabledInfobar.css
+++ b/front_end/panels/application/preloading/components/preloadingDisabledInfobar.css
@@ -7,26 +7,17 @@
 #container {
   padding: 6px 12px;
   border-bottom: 1px solid var(--sys-color-divider);
+  align-items: center;
+  display: flex;
 }
 
 #contents {
-  margin-top: 14px;
+  margin-top: calc(-1 * var(--sys-size-6));
+  padding: 0 var(--sys-size-8) var(--sys-size-2);
 }
 
 #contents * {
   background: var(--color-background-elevation-dark-only);
-}
-
-#title {
-  padding-bottom: 12px;
-  font-size: 15px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  border-bottom: 1px solid var(--sys-color-divider);
-  color: var(--sys-color-token-subtle);
-  grid-column-start: span 2;
-  font-weight: bold;
 }
 
 #contents .key {
@@ -42,14 +33,10 @@
 }
 
 #footer {
-  padding-top: 12px;
-  font-size: 15px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  color: var(--sys-color-token-subtle);
   grid-column-start: span 2;
-  font-weight: bold;
 }
 
 #footer .icon-link {
