--- a/front_end/ui/legacy/tabbedPane.css
+++ b/front_end/ui/legacy/tabbedPane.css
@@ -116,11 +116,7 @@
   min-width: 14px;
   display: flex;
   align-items: center;
-  margin-right: 2px;
-}
-
-.tabbed-pane-header-tab-icon devtools-icon {
-  margin-left: -1px;
+  margin-right: var(--sys-size-2);
 }
 
 .tabbed-pane-header-tab-suffix-element {
@@ -129,23 +125,19 @@
 }
 
 .tabbed-pane-header-tab {
+  font: var(--sys-typescale-body4-medium);
+  color: var(--sys-color-on-surface-subtle);
+  height: var(--sys-size-12);
   float: left;
-  padding: 2px 0.8em;
-  height: 26px;
-  line-height: 16px;
+  padding: 0 10px;
   white-space: nowrap;
   cursor: default;
   display: flex;
   align-items: center;
-  color: var(--ui-text);
 }
 
 .tabbed-pane-header-tab.closeable {
-  padding-right: 4px;
-}
-
-.tabbed-pane-header-tab.preview.closeable {
-  padding-right: 5px;
+  padding-right: var(--sys-size-3);
 }
 
 .tabbed-pane-header-tab devtools-icon.dot::before {
@@ -190,7 +182,6 @@
 }
 
 .tabbed-pane-header-tab .tabbed-pane-close-button {
-  margin: 0 -3px 0 4px;
   visibility: hidden;
 }
 
@@ -295,10 +286,11 @@
 }
 
 .tabbed-pane-tab-slider {
-  height: 2px;
+  height: 3px;
   position: absolute;
   bottom: -1px;
-  background-color: var(--sys-color-primary-bright);
+  background-color: var(--sys-color-primary);
+  border-radius: var(--sys-shape-corner-full) var(--sys-shape-corner-full) 0 0;
   left: 0;
   transform-origin: 0 100%;
   transition: transform 150ms cubic-bezier(0, 0, 0.2, 1);
@@ -338,7 +330,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 3px;
+  margin-left: var(--sys-size-2);
   flex-shrink: 0;
 }
 
