--- a/front_end/ui/components/request_link_icon/requestLinkIcon.css
+++ b/front_end/ui/components/request_link_icon/requestLinkIcon.css
@@ -21,6 +21,9 @@ button {
   background: transparent;
   margin: 0;
   padding: 0;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
 
   &.link {
     cursor: pointer;
