--- a/front_end/ui/legacy/components/inline_editor/bezierSwatch.css
+++ b/front_end/ui/legacy/components/inline_editor/bezierSwatch.css
@@ -8,15 +8,15 @@
   white-space: nowrap;
 }
 
-devtools-icon.bezier-swatch-icon {
+devtools-icon {
   position: relative;
   transform: scale(0.7);
   margin: -5px -2px -3px -4px;
   user-select: none;
   color: var(--icon-css);
   cursor: default;
-}
 
-devtools-icon.bezier-swatch-icon:hover {
-  color: var(--icon-css-hover);
+  &:hover {
+    color: var(--icon-css-hover);
+  }
 }
