--- a/front_end/panels/profiler/profileLauncherView.css
+++ b/front_end/panels/profiler/profileLauncherView.css
@@ -11,44 +11,39 @@
 .profile-launcher-view-content {
   margin: 10px 16px;
   flex: auto 1 0;
-}
 
-.profile-launcher-view-content h1 {
-  font-size: 15px;
-  font-weight: normal;
-  margin: 6px 0 10px;
-}
+  & h1 {
+    font: var(--sys-typescale-headline4);
+    margin: 6px 0 10px;
+  }
 
-.profile-launcher-view-content [is="dt-radio"] {
-  font-size: 13px;
-}
+  & label {
+    font: var(--sys-typescale-body3-regular);
+  }
 
-.profile-launcher-view-content p {
-  color: var(--sys-color-token-subtle);
-  margin-top: 1px;
-  margin-left: 22px;
-}
+  & p {
+    color: var(--sys-color-token-subtle);
+    margin-top: var(--sys-size-1);
+    margin-left: var(--sys-size-10);
 
-.profile-launcher-view-content p dt-checkbox {
-  display: flex;
-}
+    & > dt-checkbox {
+      display: flex;
+    }
+  }
 
-.profile-launcher-view-content button.text-button.running,
-.profile-launcher-view-content button.text-button.running:focus {
-  color: var(--sys-color-error);
-}
+  .profile-launcher-view-content button.text-button.running,
+  .profile-launcher-view-content button.text-button.running:focus {
+    color: var(--sys-color-error);
+  }
 
-.profile-launcher-view-content > div {
-  flex: auto 0 0;
-}
+  & > div {
+    flex: auto 0 0;
+  }
 
-.profile-launcher-view-content > .profile-isolate-selector-block {
-  flex: auto 1 0;
-  overflow: hidden;
-}
-
-.profile-isolate-selector-block button {
-  min-width: 110px;
+  & > .profile-isolate-selector-block {
+    flex: auto 1 0;
+    overflow: hidden;
+  }
 }
 
 .profile-launcher-target-list {
