[webauthn] Fix broken authenticator layout.
Fixed: 386767283
Bug: 40066880
Change-Id: I5cbda336109ebbb05613b084b44443b4e4a23753
Screenshot: https://i.imgur.com/2AxHpHb.png
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6132877
Reviewed-by: Changhao Han <changhaohan@chromium.org>
Commit-Queue: Changhao Han <changhaohan@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/panels/webauthn/webauthnPane.css
+++ b/front_end/panels/webauthn/webauthnPane.css
@@ -69,11 +69,6 @@
   margin: 0;
 }
 
-.authenticator-field {
-  display: flex;
-  margin: auto;
-}
-
 .authenticator-section-header {
   display: flex;
   justify-content: space-between;
@@ -100,8 +95,6 @@
 }
 
 .authenticator-field-value {
-  padding: 5px 0;
-  display: inline-block;
   font-family: monospace;
 }
 
@@ -110,6 +103,7 @@
   top: 2px;
 }
 
+.authenticator-field,
 .authenticator-option {
   display: flex;
   padding-bottom: 10px;
@@ -124,8 +118,7 @@
 .authenticator-option-label {
   text-align: right;
   width: 200px;
-  display: inline-block;
-  padding: 0 10px 0 0;
+  padding-right: 10px;
 }
 
 td .text-button {
