--- a/front_end/ui/components/dialogs/shortcutDialog.css
+++ b/front_end/ui/components/dialogs/shortcutDialog.css
@@ -71,6 +71,13 @@
   display: flex;
   flex-direction: column;
   border-bottom: var(--sys-size-1) solid var(--sys-color-divider);
+  padding-bottom: var(--sys-size-5);
+
+  & label {
+    display: flex;
+    font: var(--sys-typescale-body3-regular);
+    gap: var(--sys-size-2);
+  }
 }
 
 .keybinds-key {
