Display anonymous frames as ignored if they call ignored code
Anonymous frames for JS builtins are displayed in error stack
traces in the console tab. Because they don't link to any code
we were not treated them as ignored, as they had no ignore listed
link to base this judgement on. Now we treat them as ignored if
they call ignored code.

Bug: 382422292
Change-Id: Ide669e69e22060cb0779d06a71dff8dce9962f67
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6129131
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Eric Leese <leese@chromium.org>

--- a/front_end/panels/console/consoleView.css
+++ b/front_end/panels/console/consoleView.css
@@ -389,6 +389,12 @@
   .formatted-stack-frame:has(.ignore-list-link) {
     display: var(--display-ignored-formatted-stack-frame);
     opacity: 60%;
+
+    /* Subsequent builtin stack frames are also treated as ignored */
+    & + .formatted-builtin-stack-frame {
+      display: var(--display-ignored-formatted-stack-frame);
+      opacity: 60%;
+    }
   }
 }
 
