Ensure toolbar items use the default cursor.
This ensures that toolbars with custom cursors (e.g. resizeable ones) do
not have their cursor also applied when the user hovers over an
individual toolbar item. testing

Fixed: 371838044
Change-Id: Ibcf7a8a837540cb3d940067eb9430f706674c219
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6142896
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Andres Olivares <andoli@chromium.org>
Commit-Queue: Andres Olivares <andoli@chromium.org>

--- a/front_end/ui/legacy/toolbar.css
+++ b/front_end/ui/legacy/toolbar.css
@@ -50,6 +50,14 @@
   white-space: pre;
   overflow: hidden;
   max-width: 100%;
+
+  /* Some toolbars have a different cursor on hover (for example, resizeable
+   * ones which can be clicked + dragged to move). But we want to make sure
+   * by default each toolbar item shows the default cursor, because you
+   * cannot click + drag on the item to resize the toolbar container, you
+   * have to click + drag only on empty space. See crbug.com/371838044 for
+   * an example. */
+  cursor: default;
 }
 
 devtools-adorner.fix-perf-icon {
