[M133][GM3Restyling] What's new style changes
This makes a few style changes to the what's new panel after a UX
review:
* adjust a max width for each card
* center the cards

Before: https://i.imgur.com/yvvJUa6.png
After: https://i.imgur.com/N11xGuu.png
Bug: 325441858 Fixed: 388671879
Change-Id: Ic64e090cab2cda45796e7979f3e9f8aff16bb84e
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6152194
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
(cherry picked from commit 9307c37974292cbe0ead62c9f2507c81f7932dc0)
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6162514
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>

--- a/front_end/panels/whats_new/releaseNoteView.css
+++ b/front_end/panels/whats_new/releaseNoteView.css
@@ -5,9 +5,16 @@
  */
 
 .whatsnew {
-  padding: var(--sys-size-9) 0 0;
   background: var(--sys-color-header-container);
   flex-grow: 1;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.whatsnew-content {
+  max-width: var(--sys-size-35);
+  padding: var(--sys-size-9) 0 0;
   display: flex;
   flex-direction: column;
   gap: var(--sys-size-9);
@@ -46,7 +53,6 @@
   background-color: var(--sys-color-surface3);
   padding: 0 var(--sys-size-8) var(--sys-size-8);
   border-radius: var(--sys-shape-corner-medium);
-  flex-shrink: 0;
   margin: 0 var(--sys-size-9) var(--sys-size-9);
 }
 
@@ -60,8 +66,7 @@
     display: flex;
     flex-direction: row;
     gap: var(--sys-size-5);
-    flex-shrink: 0;
-    padding: var(--sys-size-9) 0 var(--video-bottom-padding) var(--sys-size-9);
+    padding: var(--sys-size-9) var(--sys-size-9) var(--video-bottom-padding);
 
     /* This extra margin makes sure that we have some space between
        the scrollable container for videos and the cards below it. */
