[Console Insights] Render direct citations from Search RAG
Screenshot: https://i.imgur.com/68Crmvd.png

Bug: 381228083
Change-Id: I613c86da3cfe41a40a124134436a85d3f0e9365f
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6138609
Commit-Queue: Alex Rudenko <alexrudenko@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -332,3 +332,18 @@ h2:focus-visible {
 .close-button {
   align-self: flex-start;
 }
+
+.sources-list {
+  padding-left: 15px;
+  margin-bottom: 10px;
+  list-style: none;
+  counter-reset: sources;
+}
+
+.sources-list li {
+  counter-increment: sources;
+}
+
+.sources-list li::marker {
+  content: "[" counter(sources) "]";
+}
