[Console Insights] Align whitespace of 3 lists
Screenshots: https://imgur.com/a/sTKXzBU

Bug: 381228083
Change-Id: I896f82464375e5c251a8458197403c304110dc04
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6140247
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -334,16 +334,29 @@ h2:focus-visible {
 }
 
 .sources-list {
-  padding-left: 15px;
-  margin-bottom: 10px;
+  padding-left: var(--sys-size-6);
+  margin-bottom: var(--sys-size-6);
   list-style: none;
   counter-reset: sources;
+  display: grid;
+  grid-template-columns: var(--sys-size-9) auto;
+  list-style-position: inside;
 }
 
 .sources-list li {
-  counter-increment: sources;
+  display: contents;
 }
 
-.sources-list li::marker {
+.sources-list li::before {
+  counter-increment: sources;
   content: "[" counter(sources) "]";
+  display: table-cell;
+}
+
+.references-list {
+  padding-left: var(--sys-size-8);
+}
+
+.references-list li {
+  padding-left: var(--sys-size-3);
 }
