--- a/front_end/panels/explain/components/consoleInsightSourcesList.css
+++ b/front_end/panels/explain/components/consoleInsightSourcesList.css
@@ -21,6 +21,7 @@ ul {
   font-weight: 400;
   line-height: 18px;
   margin-top: 8px;
+  padding-left: var(--sys-size-6);
 }
 
 li {
@@ -38,6 +39,7 @@ ul .link {
 devtools-icon {
   height: 16px;
   width: 16px;
+  margin-right: var(--sys-size-1);
 }
 
 devtools-icon[name="open-externally"] {
