--- a/front_end/panels/security/cookieReportView.css
+++ b/front_end/panels/security/cookieReportView.css
@@ -12,7 +12,6 @@
   max-height: 100%;
   gap: var(--sys-size-6);
   padding-top: var(--sys-size-5);
-  padding-bottom: var(--sys-size-5);
 }
 
 .header {
@@ -47,6 +46,7 @@
 
 .data-grid {
   flex: auto;
+  margin-left: -1px;
 }
 
 .empty-report {
