[ui] Make `Toolbar` into a custom element with light DOM.
This is the first step towards making it possible to use the `Toolbar`
component within lit-html templates. It turns the `UI.Toolbar.Toolbar`
class into an `HTMLElement` and removes its shadow DOM, using a light
DOM instead with global styles. This makes it possible to easily style
toolbars and their elements differently in different context, without
having to inject additional styles into the shadow DOM manually.

Bug: 388445687
Change-Id: I7a4e03a8c12978b7d9d9da79597b656409b3a9cb
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6157257
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/animation/animationTimeline.css
+++ b/front_end/panels/animation/animationTimeline.css
@@ -379,7 +379,7 @@ text.animation-timeline-grid-label {
   padding: 10px;
 }
 
-.toolbar.animation-controls-toolbar {
+.animation-controls-toolbar {
   flex: 0 0 auto;
 }
 
