--- a/front_end/panels/issues/issuesPane.css
+++ b/front_end/panels/issues/issuesPane.css
@@ -23,7 +23,7 @@
   flex: none;
 }
 
-.issues-toolbar-container > .toolbar {
+.issues-toolbar-container > devtools-toolbar {
   background-color: var(--sys-color-cdt-base-container);
   border-bottom: 1px solid var(--sys-color-divider);
 }
