--- a/front_end/panels/layer_viewer/layers3DView.css
+++ b/front_end/panels/layer_viewer/layers3DView.css
@@ -9,7 +9,7 @@
   user-select: none;
 }
 
-.toolbar {
+devtools-toolbar {
   background-color: var(--sys-color-cdt-base-container);
   border-bottom: 1px solid var(--sys-color-divider);
 }
