--- a/front_end/panels/network/networkLogView.css
+++ b/front_end/panels/network/networkLogView.css
@@ -57,7 +57,7 @@
   user-select: text;
 }
 
-.panel.network .toolbar.network-summary-bar {
+.panel.network devtools-toolbar.network-summary-bar {
   border-bottom: 0;
 }
 
