--- a/front_end/panels/protocol_monitor/components/toolbar.css
+++ b/front_end/panels/protocol_monitor/components/toolbar.css
@@ -15,7 +15,7 @@
   display: block;
 }
 
-.toolbar {
+devtools-toolbar {
   align-items: center;
   display: flex;
   justify-content: space-between;
