--- a/front_end/ui/legacy/components/source_frame/resourceSourceFrame.css
+++ b/front_end/ui/legacy/components/source_frame/resourceSourceFrame.css
@@ -8,7 +8,7 @@
   flex: 1;
 }
 
-.toolbar {
+devtools-toolbar {
   background-color: var(--sys-color-cdt-base-container);
   border-top: 1px solid var(--sys-color-divider);
 }
