--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -32,7 +32,7 @@
   flex: none;
 }
 
-.timeline-toolbar-container > .toolbar {
+.timeline-toolbar-container > devtools-toolbar {
   background-color: var(--sys-color-cdt-base-container);
   border-bottom: 1px solid var(--sys-color-divider);
 }
@@ -373,7 +373,7 @@
   overflow: hidden;
 }
 
-.timeline-tree-view .toolbar {
+.timeline-tree-view devtools-toolbar {
   background-color: var(--sys-color-cdt-base-container);
   border-bottom: 1px solid var(--sys-color-divider);
 }
@@ -590,4 +590,79 @@
 
 devtools-feedback-button {
   float: right;
+}
+
+devtools-toolbar {
+  .history-dropdown-button {
+    width: var(--sys-size-23);
+    height: var(--sys-size-9);
+    border-radius: var(--sys-shape-corner-extra-small);
+    text-align: left;
+    display: flex;
+    padding-right: var(--sys-size-5);
+
+    &:hover {
+      background-color: var(--sys-color-state-hover-on-subtle);
+    }
+
+    &:active {
+      background-color: var(--sys-color-state-ripple-neutral-on-subtle);
+    }
+
+    &:hover:active {
+      background:
+        linear-gradient(var(--sys-color-state-hover-on-subtle), var(--sys-color-state-hover-on-subtle)),
+        linear-gradient(var(--sys-color-state-ripple-neutral-on-subtle), var(--sys-color-state-ripple-neutral-on-subtle));
+    }
+
+    &:focus-visible {
+      outline: var(--sys-size-2) solid var(--sys-color-state-focus-ring);
+    }
+
+    &[disabled] {
+      pointer-events: none;
+      color: var(--sys-color-state-disabled);
+      background-color: var(--sys-color-state-disabled-container);
+
+      .content::after {
+        background-color: var(--sys-color-state-disabled);
+      }
+    }
+
+    & > .content {
+      margin-left: 5px;
+      padding-right: 5px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      flex: 1 1;
+      min-width: 35px;
+
+      &::after {
+        float: right;
+        user-select: none;
+        mask-image: var(--image-file-triangle-down);
+        width: 14px;
+        height: 14px;
+        content: "";
+        position: absolute;
+        background-color: var(--icon-default);
+        right: var(--sys-size-3);
+        top: var(--sys-size-3);
+      }
+    }
+  }
+
+  @media (forced-colors: active) {
+    .history-dropdown-button[disabled] {
+      opacity: 100%;
+    }
+
+    .history-dropdown-button > .content::after {
+      background-color: ButtonText;
+    }
+
+    .history-dropdown-button[disabled] > .content::after {
+      background-color: GrayText;
+    }
+  }
 }
