--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -198,7 +198,7 @@ iframe.fill {
   position: relative;
 }
 
-.view-container > .toolbar {
+.view-container > devtools-toolbar {
   border-bottom: 1px solid var(--sys-color-divider);
 }
 
@@ -756,5 +756,562 @@ iframe.panel.extension {
   :root {
     --legacy-accent-color: Highlight;
     --legacy-focus-ring-inactive-shadow-color: ButtonText;
+  }
+}
+
+/* Toolbar styles */
+devtools-toolbar {
+  padding: 0 2px;
+  position: relative;
+  white-space: nowrap;
+  height: var(--toolbar-height);
+  overflow: hidden;
+  display: flex;
+  flex: none;
+  align-items: center;
+  z-index: 0;
+
+  --toolbar-height: 26px;
+
+  &.wrappable {
+    flex-wrap: wrap;
+    overflow: visible;
+  }
+
+  &.toolbar-grow-vertical {
+    height: initial;
+  }
+
+  &.vertical {
+    flex-direction: column;
+    height: auto;
+    align-items: flex-start;
+  }
+
+  .toolbar-item {
+    position: relative;
+    display: flex;
+    background-color: transparent;
+    flex: none;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    height: var(--toolbar-height);
+    border: none;
+    white-space: pre;
+    overflow: hidden;
+    max-width: 100%;
+
+    /* Some toolbars have a different cursor on hover (for example, resizeable
+     * ones which can be clicked + dragged to move). But we want to make sure
+     * by default each toolbar item shows the default cursor, because you
+     * cannot click + drag on the item to resize the toolbar container, you
+     * have to click + drag only on empty space. See crbug.com/371838044 for
+     * an example. */
+    cursor: default;
+  }
+
+  devtools-adorner.fix-perf-icon {
+    --override-adorner-text-color: transparent;
+    --override-adorner-border-color: transparent;
+    --override-adorner-background-color: transparent;
+  }
+
+  .toolbar-item,
+  .toolbar-item .devtools-link {
+    color: var(--icon-default);
+  }
+
+  &.vertical .toolbar-item {
+    height: auto;
+    min-height: var(--toolbar-height);
+    white-space: normal;
+  }
+
+  devtools-issue-counter.toolbar-item {
+    margin-top: -4px;
+    padding-left: 1px;
+  }
+
+  devtools-issue-counter.main-toolbar {
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+
+  .toolbar-dropdown-arrow {
+    pointer-events: none;
+    flex: none;
+    top: 2px;
+  }
+
+  .toolbar-select-container .toolbar-dropdown-arrow {
+    left: -7px;
+  }
+
+  .toolbar-button.dark-text .toolbar-dropdown-arrow {
+    color: var(--sys-color-on-surface);
+  }
+
+  /* Toolbar item */
+
+  .toolbar-button {
+    white-space: nowrap;
+    overflow: hidden;
+    min-width: 28px;
+    background: transparent;
+    border-radius: 0;
+
+    &[aria-haspopup="true"][aria-expanded="true"] {
+      pointer-events: none;
+    }
+  }
+
+  .toolbar-item-search {
+    min-width: 5.2em;
+    max-width: 300px;
+    flex: 1 1 auto;
+    justify-content: start;
+    overflow: revert;
+  }
+
+  .toolbar-text {
+    margin: 0 5px;
+    flex: none;
+    color: var(--ui-text);
+  }
+
+  .toolbar-text:empty {
+    margin: 0;
+  }
+
+  .toolbar-has-dropdown {
+    justify-content: space-between;
+    height: var(--sys-size-9);
+    padding: 0 var(--sys-size-2) 0 var(--sys-size-4);
+    margin: 0 var(--sys-size-2);
+    gap: var(--sys-size-2);
+    border-radius: var(--sys-shape-corner-extra-small);
+
+    &:hover::after,
+    &:active::before {
+      content: "";
+      height: 100%;
+      width: 100%;
+      border-radius: inherit;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    &:hover::after {
+      background-color: var(--sys-color-state-hover-on-subtle);
+    }
+
+    &:active::before {
+      background-color: var(--sys-color-state-ripple-neutral-on-subtle);
+    }
+
+    &:focus-visible {
+      outline: var(--sys-size-2) solid var(--sys-color-state-focus-ring);
+    }
+
+    &[disabled] {
+      pointer-events: none;
+      background-color: var(--sys-color-state-disabled-container);
+      color: var(--sys-color-state-disabled);
+    }
+  }
+
+  .toolbar-has-dropdown-shrinkable {
+    flex-shrink: 1;
+  }
+
+  .toolbar-has-dropdown .toolbar-text {
+    margin: 0;
+    text-overflow: ellipsis;
+    flex: auto;
+    overflow: hidden;
+    text-align: right;
+  }
+
+  .toolbar-render-as-links * {
+    font-weight: initial;
+    color: var(--sys-color-primary);
+    text-decoration: underline;
+    cursor: pointer;
+  }
+
+  .toolbar-render-as-links button {
+    height: 15px;
+    margin: 2px;
+  }
+
+  .toolbar-render-as-links button:focus-visible {
+    outline: auto 5px -webkit-focus-ring-color;
+  }
+
+  :not(.toolbar-render-as-links) .toolbar-button:not(.toolbar-has-dropdown):focus-visible::before {
+    position: absolute;
+    inset: 2px;
+    background-color: var(--sys-color-state-focus-highlight);
+    border-radius: 2px;
+    content: "";
+    /* This ::before rule serves as a background for an element.
+    Setting z-index to make sure it's always below the content. */
+    z-index: -1;
+  }
+
+  .toolbar-glyph {
+    flex: none;
+  }
+  /* Button */
+
+  .toolbar-button:disabled {
+    opacity: 50%;
+  }
+
+  .toolbar-button.copied-to-clipboard::after {
+    content: attr(data-content);
+    position: fixed;
+    margin-top: calc(2 * var(--toolbar-height));
+    padding: 3px 5px;
+    color: var(--sys-color-token-subtle);
+    background: var(--sys-color-cdt-base-container);
+    animation: 2s fade-out;
+    font-weight: normal;
+    border: 1px solid var(--sys-color-divider);
+    border-radius: 3px;
+  }
+
+  .toolbar-button.toolbar-state-on .toolbar-glyph {
+    color: var(--icon-toggled);
+  }
+
+  .toolbar-state-on.toolbar-toggle-with-dot .toolbar-text::after {
+    content: "";
+    position: absolute;
+    bottom: 2px;
+    background-color: var(--sys-color-primary-bright);
+    width: 4.5px;
+    height: 4.5px;
+    border: 2px solid var(--override-toolbar-background-color, --sys-color-cdt-base-container);
+    border-radius: 50%;
+    right: 0;
+  }
+
+  .toolbar-button.toolbar-state-on.toolbar-toggle-with-red-color .toolbar-glyph,
+  .toolbar-button.toolbar-state-off.toolbar-default-with-red-color .toolbar-glyph {
+    color: var(--icon-error) !important; /* stylelint-disable-line declaration-no-important */
+  }
+
+  .toolbar-button:not(.toolbar-has-glyph, .toolbar-has-dropdown, .largeicon-menu, .toolbar-button-secondary) {
+    font-weight: bold;
+  }
+
+  .toolbar-button.dark-text .toolbar-text {
+    color: var(--sys-color-on-surface) !important;  /* stylelint-disable-line declaration-no-important */
+  }
+
+  .toolbar-button.toolbar-state-on .toolbar-text {
+    color: var(--sys-color-primary);
+  }
+
+  .toolbar-button.toolbar-state-on:enabled:active .toolbar-text {
+    color: var(--sys-color-primary-bright);
+  }
+
+  :not(.toolbar-render-as-links) .toolbar-button:enabled:hover:not(:active) .toolbar-glyph {
+    color: var(--sys-color-on-surface);
+  }
+
+  :not(.toolbar-render-as-links) .toolbar-button:enabled:hover:not(:active) .toolbar-text {
+    color: var(--sys-color-on-surface);
+  }
+
+  .toolbar-button.toolbar-state-on:enabled:hover:not(:active) .toolbar-glyph {
+    color: var(--sys-color-primary);
+  }
+
+  .toolbar-button.toolbar-state-on:enabled:hover:not(:active) .toolbar-text {
+    color: var(--sys-color-primary);
+  }
+
+  /* Checkbox */
+
+  .toolbar-item.checkbox {
+    padding: 0 5px 0 0;
+  }
+
+  /* Select */
+
+  .toolbar-select-container {
+    display: inline-flex;
+    flex-shrink: 0;
+    padding-left: 2px;
+  }
+
+  select.toolbar-item {
+    min-width: var(--sys-size-14);
+    appearance: none;
+    padding: 0 var(--sys-size-9) 0 var(--sys-size-5);
+    margin-right: -10px;
+    position: relative;
+    height: var(--sys-size-9);
+    border-radius: var(--sys-shape-corner-extra-small);
+
+    &:disabled {
+      opacity: 100%;
+      pointer-events: none;
+      background-color: var(--sys-color-state-disabled-container);
+      color: var(--sys-color-state-disabled);
+
+      & + .toolbar-dropdown-arrow {
+        color: var(--sys-color-state-disabled);
+      }
+    }
+
+    &:hover {
+      background-color: var(--sys-color-state-hover-on-subtle);
+    }
+
+    &:active {
+      background-color: var(--sys-color-state-ripple-neutral-on-subtle);
+    }
+
+    &:hover:active {
+      background:
+        linear-gradient(var(--sys-color-state-hover-on-subtle), var(--sys-color-state-hover-on-subtle)),
+        linear-gradient(var(--sys-color-state-ripple-neutral-on-subtle), var(--sys-color-state-ripple-neutral-on-subtle));
+    }
+  }
+
+  button.toolbar-item:focus-visible,
+  select.toolbar-item:focus-visible {
+    outline: var(--sys-size-2) solid var(--sys-color-state-focus-ring);
+
+    &.toolbar-has-dropdown {
+      background: none;
+    }
+  }
+
+  select.toolbar-item:focus-visible > * {
+    background: var(--sys-color-cdt-base-container);
+    border-radius: 7px;
+  }
+
+  /* Input */
+
+  .toolbar-input {
+    box-shadow: inset 0 0 0 2px transparent;
+    box-sizing: border-box;
+    width: 120px;
+    height: var(--sys-size-9);
+    padding: 0 var(--sys-size-2) 0 var(--sys-size-5);
+    margin: 1px 3px;
+    border-radius: 100px;
+    min-width: 35px;
+    position: relative;
+
+    &.focused {
+      box-shadow: inset 0 0 0 2px var(--sys-color-state-focus-ring);
+    }
+
+    &:not(:has(devtools-button:hover), .disabled):hover {
+      background-color: var(--sys-color-state-hover-on-subtle);
+    }
+
+    &::before {
+      content: "";
+      box-sizing: inherit;
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      left: 0;
+      background: var(--sys-color-cdt-base);
+      z-index: -1;
+    }
+
+    & > devtools-icon {
+      color: var(--sys-color-on-surface-subtle);
+      width: var(--sys-size-8);
+      height: var(--sys-size-8);
+      margin-right: var(--sys-size-3);
+    }
+
+    &.disabled > devtools-icon {
+      color: var(--sys-color-state-disabled);
+    }
+  }
+
+  .toolbar-filter .toolbar-input-clear-button {
+    margin-right: var(--sys-size-4);
+  }
+
+  .toolbar-input-empty .toolbar-input-clear-button {
+    display: none;
+  }
+
+  .toolbar-prompt-proxy {
+    flex: 1;
+  }
+
+  .toolbar-input-prompt {
+    flex: 1;
+    overflow: hidden;
+    white-space: nowrap;
+    cursor: auto;
+    color: var(--sys-color-on-surface);
+  }
+  /* Separator */
+
+  .toolbar-divider {
+    background-color: var(--sys-color-divider);
+    width: 1px;
+    margin: 5px 4px;
+    height: 16px;
+  }
+
+  .toolbar-spacer {
+    flex: auto;
+  }
+
+  .toolbar-button.emulate-active {
+    background-color: var(--sys-color-surface-variant);
+  }
+
+  &.floating {
+    flex-direction: column;
+    height: auto;
+    background-color: var(--sys-color-cdt-base-container);
+    border: 1px solid var(--sys-color-divider);
+    margin-top: -1px;
+    width: 28px;
+    left: -2px;
+  }
+
+  &:not(.floating) .toolbar-item:last-child:not(:first-child, .toolbar-select-container) {
+    flex-shrink: 1;
+    justify-content: left;
+  }
+
+  &:not(.floating) .toolbar-button.toolbar-item:last-child:not(:first-child, .toolbar-select-container) {
+    justify-content: left;
+    margin-right: 2px;
+  }
+
+  .toolbar-item.highlight::before {
+    content: "";
+    position: absolute;
+    inset: 2px;
+    border-radius: 2px;
+    background: var(--sys-color-neutral-container);
+    z-index: -1;
+  }
+
+  .toolbar-item.highlight:focus-visible {
+    background: var(--sys-color-tonal-container);
+
+    & > .title {
+      color: var(--sys-color-on-tonal-container);
+    }
+  }
+
+  devtools-icon.leading-issue-icon {
+    margin: 0 7px;
+  }
+
+  @media (forced-colors: active) {
+    .toolbar-button:disabled {
+      opacity: 100%;
+      color: Graytext;
+    }
+
+    .toolbar-item,
+    .toolbar-text {
+      color: ButtonText;
+    }
+
+    .toolbar-button:disabled .toolbar-text {
+      color: Graytext;
+    }
+
+    select.toolbar-item:disabled,
+    select.toolbar-item:disabled + .toolbar-dropdown-arrow {
+      opacity: 100%;
+      color: Graytext;
+    }
+
+    .toolbar-button.toolbar-state-on .toolbar-glyph {
+      forced-color-adjust: none;
+      color: Highlight;
+    }
+
+    .toolbar-button.toolbar-state-on .toolbar-text {
+      forced-color-adjust: none;
+      color: Highlight;
+    }
+
+    :not(.toolbar-render-as-links) .toolbar-button:enabled:hover:not(:active) .toolbar-text,
+    :not(.toolbar-render-as-links) .toolbar-button:enabled:focus:not(:active) .toolbar-text {
+      color: HighlightText;
+    }
+
+    .toolbar-button:disabled devtools-icon {
+      color: GrayText;
+    }
+
+    :not(.toolbar-render-as-links) .toolbar-button:disabled .toolbar-glyph {
+      color: GrayText;
+    }
+
+    .toolbar-button:enabled.hover:not(:active) .toolbar-glyph {
+      forced-color-adjust: none;
+      color: Highlight;
+    }
+
+    :not(.toolbar-render-as-links) .toolbar-button:enabled:hover .toolbar-glyph,
+    :not(.toolbar-render-as-links) .toolbar-button:enabled:focus .toolbar-glyph,
+    :not(.toolbar-render-as-links) .toolbar-button:enabled:hover:not(:active) .toolbar-glyph,
+    .toolbar-button:enabled:hover devtools-icon,
+    .toolbar-button:enabled:focus devtools-icon {
+      color: HighlightText;
+    }
+
+    .toolbar-input {
+      forced-color-adjust: none;
+      background: canvas;
+      box-shadow: var(--legacy-focus-ring-inactive-shadow);
+    }
+
+    .toolbar-input.focused,
+    .toolbar-input:not(.toolbar-input-empty) {
+      forced-color-adjust: none;
+      background: canvas;
+      box-shadow: var(--legacy-focus-ring-active-shadow);
+    }
+
+    .toolbar-input:hover {
+      box-shadow: var(--legacy-focus-ring-active-shadow);
+    }
+
+    .toolbar-item .devtools-link {
+      color: linktext;
+    }
+
+    .toolbar-has-dropdown {
+      forced-color-adjust: none;
+      background: ButtonFace;
+      color: ButtonText;
+    }
+  }
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 100%;
+  }
+
+  to {
+    opacity: 0%;
   }
 }
