[cleanup] More `UI.Toolbar.Toolbar` refactorings.
This adds `wrappable` and `orientation` properties/attributes to
the `UI.Toolbar.Toolbar` custom element and cleans up the styling
a bit.

Bug: 388445687
Change-Id: I420691e231f2ef3aab88b5fa8e89e0fc71cd15ba
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6163343
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -773,19 +773,23 @@ devtools-toolbar {
 
   --toolbar-height: 26px;
 
-  &.wrappable {
+  &[wrappable] {
     flex-wrap: wrap;
     overflow: visible;
-  }
-
-  &.toolbar-grow-vertical {
     height: initial;
   }
 
-  &.vertical {
+  &[orientation="vertical"] {
     flex-direction: column;
     height: auto;
     align-items: flex-start;
+
+    & > .toolbar-item {
+      height: auto;
+      min-height: var(--toolbar-height);
+      white-space: normal;
+
+    }
   }
 
   .toolbar-item {
@@ -820,12 +824,6 @@ devtools-toolbar {
   .toolbar-item,
   .toolbar-item .devtools-link {
     color: var(--icon-default);
-  }
-
-  &.vertical .toolbar-item {
-    height: auto;
-    min-height: var(--toolbar-height);
-    white-space: normal;
   }
 
   devtools-issue-counter.toolbar-item {
