--- a/front_end/panels/emulation/deviceModeView.css
+++ b/front_end/panels/emulation/deviceModeView.css
@@ -20,13 +20,17 @@
   align-items: stretch;
 }
 
-.device-mode-toolbar devtools-toolbar {
+devtools-toolbar {
   overflow: hidden;
   flex: 0 100000 auto;
   padding: 0 5px;
+
+  &[wrappable] {
+    height: var(--toolbar-height);
+  }
 }
 
-.device-mode-toolbar devtools-toolbar.device-mode-toolbar-fixed-size {
+devtools-toolbar.device-mode-toolbar-fixed-size {
   flex: 0 1 auto;
 }
 
