[Console Insights] Search RAG direct citations: link to references section and highlight
The direct citations/footnotes rendered via MarkdownView now link to
the references section instead of directly to the source URL. On
click, the references section is expanded and the corresponding URL
highlighted.

Polished the code by using extended markdown's footnote syntax for
direct citations.

Also added a sub-heading for indirect citations if there are both
direct and indirect citations.

Screencast: https://i.imgur.com/VP6vRV6.mp4

Bug: 381228083
Change-Id: I479b299a609a2b63690c53593af1507ba2ba269a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6157982
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/front_end/panels/explain/components/consoleInsight.css
+++ b/front_end/panels/explain/components/consoleInsight.css
@@ -292,6 +292,17 @@ details {
   height: auto;
 }
 
+details.references {
+  /* This transition is only added because there is no `transitionend` event in
+     JS for the `::details-content` transition. */
+  transition: margin-top var(--sys-motion-duration-short4) var(--sys-motion-easing-emphasized);
+}
+
+details.references[open] {
+  /* This transition does not affect the actual UI. */
+  margin-top: 11px;
+}
+
 h2 {
   display: block;
   font-size: var(--sys-size-7);
@@ -353,10 +364,22 @@ h2:focus-visible {
   display: table-cell;
 }
 
+.sources-list x-link.highlighted { /* stylelint-disable-line selector-type-no-unknown */
+  background-color: var(--sys-color-yellow-container);
+}
+
 .references-list {
   padding-left: var(--sys-size-8);
 }
 
 .references-list li {
   padding-left: var(--sys-size-3);
+}
+
+details h3 {
+  font-size: 10px;
+  font-weight: var(--ref-typeface-weight-medium);
+  text-transform: uppercase;
+  color: var(--sys-color-on-surface-subtle);
+  padding-left: var(--sys-size-6);
 }
