--- a/front_end/ui/components/markdown_view/markdownView.css
+++ b/front_end/ui/components/markdown_view/markdownView.css
@@ -77,4 +77,5 @@ devtools-code-block {
   color: var(--sys-color-primary);
   outline-offset: 2px;
   text-decoration: underline;
+  cursor: pointer;
 }
