[cleanup] Remove the `.toolbar-item` CSS class.
This is the next step required to eventually be able to just add
elements to the <devtools-toolbar> without having to go through the
imperative Toolbar API.

Bug: 388445687
Change-Id: I912f2d4a1285af7fab63a5268c5c0a3baa556462
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6163603
Commit-Queue: Danil Somsikov <dsv@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>

--- a/front_end/panels/profiler/profileLauncherView.css
+++ b/front_end/panels/profiler/profileLauncherView.css
@@ -122,8 +122,7 @@
 
   .profile-memory-usage-item-trend,
   .profile-memory-usage-item-trend.increasing,
-  .profile-launcher-view-content button.running,
-  body.inactive .profile-launcher-view-content button.running:not(.toolbar-item) {
+  .profile-launcher-view-content button.running {
     color: ButtonText;
   }
 
