Add calibrated CPU throttling presets
Adds two CPU throttling presets - low-tier mobile and mid-tier mobile - and a calibration process that determines the best throttling rate to
match the given preset.

The calibration process uses a benchmark and experimentally adjusts the
applied CPU throttling to discover the rate that produces the most
similar results.

See go/cpq:adaptive-throttling for more detail.

Bug: 311438112
Change-Id: Iee049f6c8e9c33ec1dee9799eeb8e370c32d9f0a
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6151074
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/mobile_throttling/throttlingSettingsTab.css
+++ b/front_end/panels/mobile_throttling/throttlingSettingsTab.css
@@ -121,3 +121,35 @@
   align-items: center;
   gap: var(--sys-size-9);
 }
+
+.cpu-preset-section {
+  padding: 14px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.cpu-preset-result.not-calibrated {
+  font-style: italic;
+}
+
+.cpu-preset-calibrate {
+  flex-direction: column;
+  gap: 14px;
+}
+
+.cpu-preset-calibrate .button-container {
+  display: flex;
+  gap: 10px;
+}
+
+.cpu-preset-calibrate .text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.text-with-icon {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
